Fixed loose list issues (cf https://stackoverflow.com/a/43505265)

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -108,6 +108,12 @@ a:hover { color: $primary-color; }
   margin-top: 2.5rem;
 }
 */
+ol, ul { 
+  padding-left: 1.2em; 
+  list-style-position: outside; 
+  
+  p { margin-bottom: 1rem; }
+}
 
 article {
   min-height: $main-min-height;
